# radio-robot

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.py  codal.devicebus.json  codal.json  device-bus-tickets.md  goto_world_results.csv  justfile  pyproject.toml
.clasi/: .clasi.db  config.yaml  oop
.clasi/architecture/: architecture-update-011.md  architecture-update-012.md  architecture-update-020.md  architecture-update-027.md  architecture-update-030.md  architecture-update-031.md  architecture-update-034.md  architecture-update-042.md  architecture-update-044.md  architecture-update-045.md
.clasi/issues/: a1-navigation-and-pose-ownership.md  a1a-fold-camera-goto-out-of-cli.md  a1b-delete-host-steering-controllers.md  a1c-pose-authority-architecture-statement.md  a2-protocol-out-of-control-layer.md  a3-split-motioncontroller-and-robot.md  a5-serial-transport-encapsulation.md  a6-extract-library-logic-from-cli.md  a7-consolidate-calibration.md  a8-config-registry-sync-lint.md  bench-otos-synthetic-otos-sensor-for-full-stack-bench-testing.md  bench-programs-runaway-auto-abort.md  d01-fuse-otos-heading-into-ekf.md  d02-apply-rotational-slip.md  d03-ekf-gate-recovery-path.md  d04-watchdog-role-and-safe-rearm.md  d05-bound-goto-pre-rotate-phase.md  d06-keepalive-must-not-mutate-active-command.md  d07-motioncommand-ownership-in-pre-rotate.md  d08-pursuit-law-hardening.md  d09-otos-validity-gating.md  d10-trustworthy-telemetry-stream.md  d11-single-ok-per-command.md  d11a-serial-conn-stops-eating-input-buffer.md  d12-numerical-and-timing-hygiene.md  field-024-full-speed-spin-unresolved.md  fr-bench-dbg-otos-no-reply.md  (+23 more)
bug-reports/: aprilcam-camera-y-axis-inverted.md
config/: devices.json  dotconfig.yaml
docs/: architecture.md  coding-standards.md  debugging.md  hardware-bench-testing.md  kinematics-model.md  overview.md  protocol-v2.md  protocol-v3.md  protocol-v4.md  specification.md
host/: calibrate_linear.py  calibrate_verify.py  pyproject.toml
host/robot_radio/: README.md  __init__.py
host/robot_radio/calibration/: angular.py  fit_sim_error_model.py  linear.py  push.py
host/robot_radio/config/: robot_config.py
host/robot_radio/controllers/: __init__.py  ltv.py  pure_pursuit.py  stanley.py
host/robot_radio/field/: __init__.py  playfield.py
host/robot_radio/io/: calibrate.py  cli.py  preview.py  proxy.py  robot_mcp.py  serial_conn.py  sim_conn.py  sim_loop.py
host/robot_radio/kinematics/: __init__.py  differential_drive.py
host/robot_radio/media/: __init__.py  movie.py
host/robot_radio/nav/: __init__.py  _approach_utils.py  camera_goto.py  nav_params.py  navigator.py
host/robot_radio/path/: __init__.py  builder.py  path_helper.py
host/robot_radio/planner/: executor.py  model.py  profile.py  tour.py
host/robot_radio/robot/: __init__.py  _legacy_tlm_text.py  clock_sync.py  connection.py  cutebot.py  legacy_render.py  legacy_translate.py  legacy_verbs.py  nezha.py  nezha_kinematic.py  nezha_state.py  protocol.py  robot.py  robot_state.py  sync_pose.py
host/robot_radio/robot/pb2/: __init__.py  common_pb2.py  config_pb2.py  drivetrain_pb2.py  envelope_pb2.py  gripper_pb2.py  motion_pb2.py  motor_pb2.py  options_pb2.py  planner_pb2.py  ports_pb2.py  sensors_pb2.py  telemetry_pb2.py
host/robot_radio/sensors/: __init__.py  calibration.py  cam_tracker.py  color.py  motion_monitor.py  odom_tracker.py  odometry.py  otos.py
host/robot_radio/testgui/: README.md  __init__.py  __main__.py  binary_bridge.py  camera_prefs.py  canvas.py  commands.py  drive.py  live_view.py  operations.py  recorder.py  sim_prefs.py  traces.py  transport.py  turn_graphs.py
host/robot_radio/testkit/: camera.py  safety.py  target.py
host/tests/: test_calibrate_linear.py  test_cli.py  test_connection.py  test_imports_smoke.py  test_nezha_drive.py  test_playfield.py  test_protocol_v2.py  test_push_calibration.py  test_robot_config.py  test_robot_state.py  test_sensors_v2.py  test_serial_conn_id_snap_routing.py  test_serial_relay_handshake.py  test_sim_realtime.py
host_tests/: CMakeLists.txt  arc_commands.ipynb  arc_gate_sweep.ipynb  conftest.py  demo_ekf_velocity_fusion.ipynb  demo_figure_eight.ipynb  demo_square.ipynb  firmware.py  playfield_tour.ipynb  sim_api.cpp  square_run_log.csv  test_033_005_wedge_hardening.py  test_bench_otos.py  test_config_set.py  test_d10_tlm.py  test_d_distance_baseline_race.py  test_dbg_otos_commands.py  test_encoder_reset.py  test_halt_controller.py  test_incident_scenarios.py  test_n4_n5_cancel_on_begin_stream_timed_distance.py  test_n7_queue_overflow_err.py  test_n8_n9_sensor_freshness.py  test_rt_slip.py  test_vw_converters.py  test_watchdog_exemption.py
mbdeploy/: pyproject.toml
mbdeploy/src/mbdeploy/: cli.py  devices.py
protos/: common.proto  communicator.proto  config.proto  drivetrain.proto  envelope.proto  gripper.proto  motion.proto  motor.proto  options.proto  planner.proto  ports.proto  sensors.proto  telemetry.proto
scripts/: build.py  build_and_deploy.py  check_config_sync.py  config_sync_allowlist.json  deploy.py  gen_boot_config.py  gen_default_config.py  gen_messages.py  gen_pb2.py  gen_version.py
source/: COMMANDS.md  WheelTestMain.cpp  dev_loop.cpp  dev_loop.h  main.cpp
src/: README.md  vendor
src/sim/: CMakeLists.txt  DESIGN.md  sim_clock.h  sim_ctypes.cpp  sim_harness.h  sim_plant.cpp  sim_plant.h
tests/: CLAUDE.md  conftest.py  test_body_kinematics.py  test_config_registry.py  test_motion_verbs_v2.py  test_odometry_midpoint.py  test_otos_fusion.py  test_pursuit_arc_steering.py  test_ratio_pid.py  test_readspeed_and_get_vel.py  test_tlm_stream.py
tests/_infra/drive/: CMakeLists.txt  drive.py  drive_api.cpp  plant.py  replay.py
tests/_infra/sim/: CMakeLists.txt  bus_drain_api.cpp  config_routing_api.cpp  drive2_api.cpp  drive_api.cpp  firmware.py  message_test_api.cpp  planner_api.cpp  sensors_api.cpp  sim_api.cpp  sim_clock.cpp  sim_ctypes.cpp  sim_harness.h  sim_plant.cpp  sim_plant.h  smoke_check.py
tests_old/: conftest.py
wedgelab/: CMakeLists.txt  README.md  demo.py
(+3974 files in other folders)
