[project]
name = "microbit-v2-samples-tools"
version = "0.20260715.25"
description = "Build/deploy tooling for microbit-v2-samples plus the robot_radio host controller and rogo CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aprilcam",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pyserial>=3.5",
    "robotpy-wpimath>=2024",
]

# `rogo` CLI entry point (relay-aware robot control: drive, turn, goto, config,
# calibrate, sync). Installed on PATH when this project is synced into the venv.
[project.scripts]
rogo = "robot_radio.io.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The importable robot_radio package lives under host/. Ship it as the wheel's
# top-level package — hatchling strips the host/ prefix, so `import robot_radio`
# resolves. (Formerly built from a standalone host/pyproject.toml; folded here.)
[tool.hatch.build.targets.wheel]
packages = ["host/robot_radio"]

[dependency-groups]
# Bench calibration / camera-ground-truth tooling (tests/calibrate/). Pulls in
# the aprilcam camera client (and its CV/gRPC stack). Install with `uv sync`.
calibrate = [
    "matplotlib>=3.8",
]
# Host-side build tooling — proto-to-C++ codegen. The device never sees protobuf.
# Install with `uv sync`.
codegen = [
    "grpcio-tools>=1.60,<2.0",
]
# Test tooling. `dev` is a uv default group, so `uv sync` installs pytest and
# keeps it. (Previously these lived only in host/pyproject.toml, which is why a
# root-level sync kept pruning pytest — folding the group here fixes that.)
dev = [
    "jsonschema>=4.26.0",
    "pygame>=2.6.1",
    "pytest>=8.0",
]
# The Robot Test GUI needs both PySide6 (widgets) and the aprilcam camera
# client (live playfield capture, tag pose). aprilcam is an editable path
# dependency (see [tool.uv.sources]); the GUI imports it lazily so the base
# robot_radio install stays lightweight for on-robot use. Install with
# `uv sync --group gui`.
gui = [
    "PySide6>=6.0",
    "aprilcam",
    # Deskewing a captured playfield frame via the daemon homography uses cv2
    # (robot_radio.media.movie / testgui.canvas). aprilcam decodes with Pillow
    # and only imports cv2 lazily, so it must be listed explicitly here.
    "opencv-python-headless>=4.13.0.92",
]

[tool.uv]
# Groups synced by default. Setting default-groups explicitly REPLACES uv's
# implicit `dev` default, so `dev` must be listed here or `uv sync` prunes pytest
# (the long-standing "pytest keeps disappearing" gotcha). calibrate + codegen give
# `uv run` the aprilcam client and grpc codegen tools without explicit --group flags.
default-groups = ["calibrate", "codegen", "dev"]

[tool.uv.sources]
aprilcam = { path = "../AprilTags", editable = true }

[tool.pytest.ini_options]
# Pin where tests live. Without this, a bare `pytest` from the repo root
# recursively collects EVERYTHING — including vendor/PythonRobotics (90+
# matplotlib/numpy path-planning *simulation* test files), whose collection
# imports modules that allocate huge grids and open animation loops. That can
# exhaust memory on a small machine. Keep collection scoped and never descend
# into vendored sims, the build tree, or the venv.
#
# Three-domain layout (sprint 077 greenfield rebuild, ticket 006 — see
# tests/CLAUDE.md). `tests/` was rebuilt from scratch (`git mv tests
# tests_old`, ticket 001) alongside `source/`; `tests/sim/` and `tests/unit/`
# are pytest-collected.
#   tests/sim/{unit,system}/   — CI gate (no hardware); skeleton only for now
#   tests/bench/               — HITL Python CLI tools against real hardware
#                                 on the bench; NOT pytest-collected
#   tests/playfield/           — HITL Python CLI tools against real hardware
#                                 on the camera-covered playfield; NOT
#                                 pytest-collected
#   tests/unit/                — kept category for host-side unit/tooling
#                                 checks that aren't sim/bench/playfield-
#                                 scoped (e.g. the gen_messages.py getter
#                                 regression guard, ticket 080-001); no
#                                 hardware, CI gate like tests/sim/.
#   tests/tools/                — kept category; skeleton only for now, not
#                                 collected until it holds real tests.
#   tests/testgui/              — headless PySide6 GUI tests for the Robot
#                                 Test GUI cockpit (ticket 083-004). Dropped
#                                 from testpaths by sprint 102 ticket 005:
#                                 testgui is parked (its `build-sim`
#                                 dependency, and much of what it drives, was
#                                 deleted along with the Elite orchestration
#                                 stack) -- not pytest-collected until a
#                                 later sprint revives it against the new
#                                 single-loop firmware. The directory itself
#                                 is left on disk, untouched.
#
# archive/tests_old/ and archive/source_old/ are the parked pre-rebuild trees
# (rollback = restore archive/source_old/ to source_old/, then codal.json
# application flip back to source_old) — never collected, never descended into.
# The norecursedirs entries below still match them by basename (fnmatch) despite
# the archive/ prefix. vendor/ sims are excluded below too.
#
# tests/sim/parked-093/ is sprint 093's own parking leaf (Decision 3): sim
# tests obsoleted by the main-loop gut to {PING, HELLO, S, STOP}, moved
# rather than deleted (see tests/sim/parked-093/README.md). norecursedirs
# matches by directory basename (fnmatch), the same way the
# "tests_old"/"source_old" bare names already exclude those trees (now under
# archive/) despite living several directories deep from wherever pytest starts --
# so the bare leaf name "parked-093" is sufficient here too, no path prefix
# needed.
#
# tests/sim/parked-094/ holds ticket 094-002's isolated Subsystems::Planner/
# Motion::VelocityRamp coverage (+ a stale 4-subsystem order-independence
# harness that depends on Planner), parked alongside Planner's relocation
# out of source/. (094-005: the 093/094 motor/hardware-inbound-queue
# teardown's drive-severed tests, formerly parked here too, are RESTORED --
# Subsystems::Drivetrain now owns its own motors and the S/STOP drive path
# reaches the plant again -- folded back into
# tests/sim/unit/test_bare_loop_commands.py.) Parked, not deleted (see
# tests/sim/parked-094/README.md), with the same bare-name basename-fnmatch
# exclusion as parked-093.
testpaths = ["tests/sim", "tests/unit"]
norecursedirs = [
    "tests_old", "source_old", "parked-093", "parked-094",
    "vendor", "build", ".venv", "node_modules",
    "*.egg", ".*", "dist", "{arch}", "__pycache__",
]
