[project]
name = "robot-radio"
version = "0.20260603.10"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robot_radio"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["vendor", "node_modules", "built", ".pxt", "old", "__pycache__"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=8.0",
]
