[project]
name = "robot-radio"
version = "0.20260612.25"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "pyserial>=3.5",
    "robotpy-wpimath>=2024",
]

# `rogo` CLI entry point (relay-aware robot control: drive, turn, goto, config,
# calibrate, sync). Installed on PATH when robot-radio is synced into the venv.
[project.scripts]
rogo = "robot_radio.io.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robot_radio"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["vendor", "node_modules", "built", ".pxt", "old", "__pycache__"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=8.0",
]
