[project]
name = "robot-radio"
version = "0.20260701.18"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "pyserial>=3.5",
    "robotpy-wpimath>=2024",
]

# `rogo` CLI entry point (relay-aware robot control: drive, turn, goto, config,
# calibrate, sync). Installed on PATH when robot-radio is synced into the venv.
[project.scripts]
rogo = "robot_radio.io.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robot_radio"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["vendor", "node_modules", "built", ".pxt", "old", "__pycache__"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=8.0",
]
# The Robot Test GUI needs both PySide6 (widgets) and the aprilcam camera
# client (live playfield capture, tag pose). aprilcam is an editable path
# dependency (see [tool.uv.sources]); the GUI imports it lazily so the base
# robot_radio install stays lightweight for on-robot use. Install with
# `uv sync --group gui` from this directory.
gui = [
    "PySide6>=6.0",
    "aprilcam",
    # Deskewing a captured playfield frame via the daemon homography uses cv2
    # (robot_radio.media.movie / testgui.canvas). aprilcam decodes with Pillow
    # and only imports cv2 lazily, so it must be listed explicitly here.
    "opencv-python-headless>=4.13.0.92",
]

[tool.uv.sources]
# AprilTags lives beside the repo root: host/ -> ../.. == RobotProjects/, then AprilTags/.
aprilcam = { path = "../../AprilTags", editable = true }
